<?xml version="1.0"?>
<package format="2">
  <name>pi_drone_server</name>
  <version>0.0.0</version>
  <description>The pi_drone_server package</description>

  <maintainer email="jmbillson@outlook.com">Joshua Billson</maintainer>

  <license>MIT</license>

  <author email="jmbillson@outlook.com">Joshua Billson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
